--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/main.css">
     <title>FizzBuzz</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="hero__box d-flex flex-column">
+            <h1 class="hero__heading text-danger text-center mt-3 mb-3">FizzBuzz</h1>
+            <div class="hero__wrappr" style="width: 800px;">
+                <form>
+                    <input type="number" class="form-control">  
+                    <button type="submit" class="btn btn-primary mt-3" style="width: 100%;">Bosing</button> 
+                </form>
+            </div>
+            <div class="answer"></div>
+        </div>
+    </div>
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
